[gd_scene load_steps=23 format=2]

[ext_resource path="res://Src/Actor/KrakenLeg.gd" type="Script" id=1]
[ext_resource path="res://Asset/Art/Kraken/Kraken_Idle.png" type="Texture" id=2]
[ext_resource path="res://Asset/Art/Kraken/Kraken_Attack.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=26]
animations = [ {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ) ],
"loop": false,
"name": "attack",
"speed": 7.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
} ]

[sub_resource type="CapsuleShape2D" id=27]
radius = 6.0
height = 10.0

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 48 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 48, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 48 )

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 48, 10 )

[sub_resource type="CircleShape2D" id=28]

[node name="KrakenLeg" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 17
script = ExtResource( 1 )
speed = 120

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -16 )
frames = SubResource( 26 )
animation = "attack"
frame = 6
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -2 )
rotation = 1.5708
shape = SubResource( 27 )

[node name="DetectUp" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 0.533333 )
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectUp"]
position = Vector2( 0, -48 )
shape = SubResource( 10 )

[node name="DetectRight" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 0.533333 )
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectRight"]
position = Vector2( 48, 0 )
shape = SubResource( 11 )

[node name="DetectDown" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 0.533333 )
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectDown"]
position = Vector2( 0, 48 )
shape = SubResource( 12 )

[node name="DetectLeft" type="Area2D" parent="."]
modulate = Color( 1, 0, 0, 0.533333 )
position = Vector2( 0, -7 )
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectLeft"]
position = Vector2( -48, 0 )
shape = SubResource( 13 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 3, -7 )
shape = SubResource( 28 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="DetectUp" to="." method="_on_DetectUp_area_entered"]
[connection signal="area_entered" from="DetectRight" to="." method="_on_DetectRight_area_entered"]
[connection signal="area_entered" from="DetectDown" to="." method="_on_DetectDown_area_entered"]
[connection signal="area_entered" from="DetectLeft" to="." method="_on_DetectLeft_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timeout"]
